--- a/final report/finalreport_template.Rmd
+++ b/final report/finalreport_template.Rmd
@@ -37,12 +37,12 @@ library(tidyverse)
 library(tidymodels)
 library(ggplot2)
 library(corrplot)
-#setwd("/home/guest/R/project1")
+setwd("/home/guest/R/project-1")
 
 #working directory is different based on user, just comment out the below line if you renamed the project
 # to anything else that's not save-the-best-for-last
 #setwd('/home/guest/save-the-best-for-last')
-setwd("/home/guest/R/save-the-best-for-last-one")
+#setwd("/home/guest/R/save-the-best-for-last-one")
 
 student <- readr::read_csv("data/student-mat.csv")
 
