--- a/final report/finalreport_template.Rmd
+++ b/final report/finalreport_template.Rmd
@@ -37,11 +37,11 @@ library(tidyverse)
 library(tidymodels)
 library(ggplot2)
 library(corrplot)
-setwd("/home/guest/R/project-1")
+#setwd("/home/guest/R/project-1")
 
 #working directory is different based on user, just comment out the below line if you renamed the project
 # to anything else that's not save-the-best-for-last
-#setwd('/home/guest/save-the-best-for-last')
+setwd('/home/guest/save-the-best-for-last')
 #setwd("/home/guest/R/save-the-best-for-last-one")
 
 student <- readr::read_csv("data/student-mat.csv")
@@ -209,7 +209,13 @@ It is extremely important to proceed with caution in interpreting the analysis o
 Thus, our multiple linear regression model takes the following form:
 Dalc= 1.28 + 0.176(goout) + 0.146(studytime) + 0.1(famrel) + 0.13(freetime)
 
-```{r R adjusted, histogram of residuals and rmse,echo = FALSE, message = FALSE}
+```{r R adjusted, histogram of residuals and rmse,echo = FALSE, message = FALSE, results = 'hide'}
+# Put 80% of the data into the training set 
+student_split_mlr <- initial_split(student)
+# Create data frames for the two sets:
+train_data_mlr <- training(student_split_mlr)
+test_data_mlr  <- testing(student_split_mlr)
+
 glance(model_regression)$adj.r.squared
 
 model_regression_follow<-augment(model_regression$fit)
@@ -221,8 +227,15 @@ ggplot(data=model_regression_follow, aes(x = model_regression_follow$.resid)) +
 
 ggplot(model_regression_follow, mapping=aes (x=.fitted, y=.resid)) + geom_point(alpha=0.5)
 
-RMSE<-sqrt(mean((model_regression_follow$Dalc - model_regression_follow$.fitted)^2))
-RMSE
+mlr_train_pred <- predict(model_regression, train_data_mlr) %>%
+  bind_cols(train_data_mlr %>% select(Dalc))
+rmse(mlr_train_pred, truth = Dalc, estimate = .pred)
+rsq(mlr_train_pred, truth = Dalc, estimate = .pred)
+
+mlr_test_pred <- predict(model_regression, test_data_mlr) %>%
+  bind_cols(test_data_mlr %>% select(Dalc))
+rmse(mlr_test_pred, truth = Dalc, estimate = .pred)
+rsq(mlr_test_pred, truth = Dalc, estimate = .pred)
 
 mean_res<-mean(model_regression_follow$.resid)
 mean_res
@@ -230,14 +243,15 @@ mean_res
 ```
 
 
-The R adjusted squared here is approximately 0.13, which implies that 13% of the variation in the data is explained by our linear model. 
+The R adjusted squared here is approximately 0.13, which implies that 13% of the variation in the response variable is explained by our linear model, which is relatively low, indicating how our model may not be a good predictor for variation in workday alcohol consumption. 
 
-The RMSE (Root Mean Square Error) is estimated to 0.82. This is relatively low which means that our model is a good fit and hence, the variables goout, studytime, famrel and freetime are good predictors of student workday alcohol consumption. 
+For our RMSE and R^2 analysis, to assess the performance of our model, we split the student data into 75% training and 25% testing data. We then evaluated the RMSE and R^2 of our model for the training and testing data, and found the RMSE and R^2 for the training data to be 0.788 and 0.150 respectively and the RMSE and R^2 value for the testing data to be 0.937 and 0.153 respectively. The RMSE is lower for the training data by a significant amount, which makes sense since the model is built for hte training data set. Interestingly, the R^2 essentially remained the same (increased very slightly) from the training set to the test set, indicating the model does not degrade so much with data beyond the training data set, so that the model is a fairly competent fit.
 
 The histogram of the residual is approximately symmetric which satisfies the condition of normality for linear regression. The mean of the residuals (-1.38079e-16) which is enough close to 0 to strengthen our linear regression model.
 
 However, though the conditions of normality was satisfied, looking at the residual plot, the conditions of independence was not satisfied due to an identified pattern of the residuals. Residuals are linearly distributed which shows some flaws of our linear regression model.Moreover, the conditions of homoscedasticity was not satisfied because residual points are not constant. In some regions of the plot, residual points are more compacted than in other. 
-Overall, we can conclude that the linear regression model we used is good at predicting student workday alcohol consumption but it is important to note that our linear model is perfect due the lack of satisfaction of some assumption for linearity.
+
+Overall, we can conclude that the linear regression model we used is competent at predicting student workday alcohol consumption due to our performance analyses. It is important to note that our linear model is not perfect due the lack of satisfaction of some assumption for linearity and low R^2 adjusted. 
 
 
 
