--- a/Powerpoint presentation.Rmd
+++ b/Powerpoint presentation.Rmd
@@ -1,13 +1,10 @@
 ---
-title: 'Student life and family circumstances that affect alcohol consumption'
-
+title: "Student life and family circumstances that affect alcohol consumption"
 author: "Colin Lee, Danielle Mensah and Haby Sow"
-
-
 date: "19/11/2021"
-
-
-output: powerpoint_presentation
+output:
+  powerpoint_presentation: default
+  beamer_presentation: default
 ---
 
 ```{r setup, include=FALSE}
@@ -38,25 +35,20 @@ Introduction
 
 This presentation outlines student life and first family circumstances that impact student alcohol consumption and the effect of alcohol consumption on student's efficacy of learning. 
 
----
 
 ---
 Background 
 
 The effects of alcohol consumption on personal health and cognition  the main area of interest for many researchers. In this research, on one hand, we will focus on other factors, such as family and the environment that impact student alcohol consumption and one the other hand,we will look at the effect of alcohol consumption on student performance in math. 
 ---
-
----
 Data Sources 
-
 Found on Kaggle, our dataset collected data on student self-reported alcohol consumption in Portuguese math class in two secondary schools, Gabriel Pereira and Moushino de Silveira during the 2005-2006 school year. In Portuguese secondary schools, ages typically range from 15-19, but this dataset also includes a few individuals from 20 - 22 years old. Additionally, unlike the USA, the minimum drinking age is 18 years old, so drinking prevalence at this educational level might be less comparable to high schools in the USA, but since drinking is legal for students nearing graduation, this may be more parallel to drinking trends in US universities. 
 ----
----
 Data presentation
 
 In addition to demographic and geographic information such as school name, address, sex, age, and  family size, our data contains relevant information needed to accomplish the analysis. See the table below:
----
-```{r}
+
+```{r echo = FALSE, message = FALSE}
 Variable_name<-c("Dalc","Walc","famrel","Pstatus","Medu","Fedu","romantic","Mjob",
                  "Fjob", "guardian" ,"famsup","absences","failures","activities","goout", "G1" ,"G2" ,"G3","freetime","studytime")
 
@@ -66,7 +58,7 @@ Table_variables = data.frame(Variable_name,Details)
 
 ```
 
-```{r}
+```{r }
 setwd("/home/guest/R/save-the-best-for-last-one")
 
 student <- readr::read_csv("data/student-mat.csv")
@@ -91,14 +83,12 @@ Logistic Regression Choice
 A logistic regression was conducted to determine what sort of family or external factors may be drivers for student alcohol consumption. 
 This decision was made in context of categorical nature of many of the variables.These indicators are involved with impacting whether or not a student can be considered an "alcoholic" or "binge drinker.
 ----
-
----
 Logistic Regression model 
-Thus, in order to set up this logistic regression, we had to begin by transforming the weekday alcoholic consumption (Dalc) value into a binary variable and other transformation of some explanatory variables as well. The logistic regression model is the following one:
-
+Thus, in order to set up this logistic regression, we had to begin by transforming the weekday alcoholic consumption (Dalc) value into a binary variable and other transformation of some explanatory variables as well. 
+---
+The logistic regression model is the following one:
 logit(pii) = log(pii/(1-pii)) = B0 + B1(urbani) + B2(famsmalli) + B3(parents_togetheri) + B4(mother_secondaryi) + B5(father_secondaryi) + B6(school_supporti) + B7(family_supporti) + B8(extra_tutoringi) + B9(attended_nurseryi) + B10(internet_accessi) + B11(traveltimei
 
-----
 
 
 ```{r logistic analysis, echo = FALSE, message = FALSE}
@@ -157,26 +147,20 @@ Result%>%
 
 
 ---
-
 Result communication
 
 In terms of external and familial factors impacting whether or not a student respondent is a school/workday binge drinker, we assess that there are only three significant variables, which are whether or not the student has extra paid math classes, whether the student has attended nursery school or not, and the travel time of the student to school. 
 ----
 
-----
 A student with extra paid math classes is 4.285 times as likely to be a binge drinker than someone who does not have extra paid math classes.
-
 A student  who has attended nursery may be 0.252 times as likely to be a binge drinker. That is ,this student is less likely to be a binge drinker. 
-
 A student who has a one unit increase in travel time to school is 2.76 times as likely to be a binge drinker. That, this student is more likely to be a binge drinker
+
 ----
 
----
 Assessing model fit
-
 For the large model, the area under the curve is 0.974, indicating very good fit. For the small model, the area under the curve is 0.686, which is not is great, but still better than just the estimate, which would be 0.50, or a random fit.
 ---
-
 
 ```{r}
 Model<-c("Large","Small")
@@ -195,3 +179,186 @@ library(tidyverse)
 table_result%>%
   knitr::kable()
 ```
+
+
+----
+
+Methodology 
+
+Linear regression
+
+A linear regression was run to understand how student life impacts alcohol consumption and also to determine how alcohol consumption impact student's learning and performance at school. This decision was made in context of numerical nature of some of the variables.
+
+----
+
+Linear regression Model
+
+Dalc= B0 + B1(failures) + B2(goout) + B3(studytime) + B4(freetime) + B5(famrel) + B6(activities_binary) + B7(G3) + B8(romantic) + B9(health) + B10(absences)
+
+
+```{r linear regression, echo = FALSE, message = FALSE}
+student$activities_binary <- ifelse(student$activities == "yes", 1, 0)
+student$romantic_binary <- ifelse(student$romantic == "yes", 1, 0)
+model_regression<-linear_reg()%>%
+set_engine("lm")%>%
+  fit(Dalc ~ failures + goout + studytime + freetime + famrel+ activities_binary + higher + G3 + romantic_binary + health + absences, data=student)
+print(tidy(model_regression))
+Result2<-tidy(model_regression)
+```
+
+
+```{r echo=TRUE}
+library(tidyverse)
+
+Result2%>%
+  knitr::kable()
+```
+
+---
+
+```{r}
+Result3<-Result2%>%
+filter(p.value < 0.05) %>%
+  print()
+```
+
+```{r echo=TRUE}
+library(tidyverse)
+
+Result3%>%
+  knitr::kable()
+```
+
+
+----
+
+```{r}
+library(patchwork)
+library(tidyverse)
+library(corrplot)
+
+new_student<-student%>%
+
+  select(c("Dalc","failures" , "goout", "studytime" , "freetime" ,"famrel", "activities_binary", "G3", "romantic_binary", "health", "absences"))
+
+dalc_correlation<-cor(new_student)
+
+#corrplot(dalc_correlation,method="ellipse", type = 'upper')
+#space saving for now, can bring back in later if space is available
+
+corrplot(dalc_correlation, method="number" , type="upper")
+```
+
+
+---
+```{r R adjusted, histogram of residuals and rmse,echo = FALSE, message = FALSE}
+glance(model_regression)$adj.r.squared
+
+model_regression_follow<-augment(model_regression$fit)
+
+ggplot(data=model_regression_follow, aes(x = model_regression_follow$.resid)) +
+    geom_histogram(fill = 'steelblue', color = 'black') +
+    labs(title = 'Histogram of Residuals', x = 'Residuals', y = 'Frequency')
+
+
+ggplot(model_regression_follow, mapping=aes (x=.fitted, y=.resid)) + geom_point(alpha=0.5)
+
+mean_res<-mean(model_regression_follow$.resid)
+mean_res
+
+```
+
+```{r}
+Adj.R.Squared<-c("0.1258835")
+Mean_res<-c("-1.38079e-16")
+
+R_mean<-data.frame(Adj.R.Squared, Mean_res)
+```
+
+```{r echo=TRUE}
+library(tidyverse)
+
+R_mean%>%
+  knitr::kable()
+```
+
+
+---
+Linear Regression Result Communication
+
+In this regression output, only the estimates for goout, studytime, freetime, famrel, and absences were significant at a p-value less than 0.05. Thus, for these variables, we reject the null hypothesis that their estimates are 0, and can state that there exists a relationship between these variables and workday alcohol consumption. 
+
+Thus, we have :
+Dalc= 1.28 + 0.176(goout) + 0.146(studytime) + 0.1(famrel) + 0.13(freetime)
+----
+From our linear model output, A one unit increase in a self-reported, subjective amount of going out with friends (such as high to very high) increases the value of workday alcohol consumption by 0.176. Thus, it appears that the more frequently a student goes out with friends, the more the student drinks. 
+----
+Additionally, a one unit increase in studytime decreases alcohol consumption by 0.146, indicating that those who dedicate more time to studying or have more time for studying have lower alcohol consumption. 
+----
+Furthermore, the higher the quality of family relationships, the less alcohol consumption is. A one unit increase in the quality of family relationships decreases daily alcohol consumption by 0.1. 
+----
+The model's outputs also portray how a one unit increase in freetime also increases alcohol consumption by 0.13. Lastly, daily alcohol consumption is also significantly related to absences, where a single increase in the number can be traced to a 0.01 increase in alcohol consumption
+---
+
+Model Validation and Accuracy
+
+The R adjusted squared here is approximately 0.13, which implies that 13% of the variation in the data is explained by our linear model. The Adjusted is pretty low which suggests that our model is somehow weak. 
+
+The histogram of the residual is approximately symmetric which satisfies the condition of normality for linear regression. The mean of the residuals (-1.38079e-16) which is enough close to 0 to strengthen our linear regression model.
+---
+However, though the conditions of normality was satisfied, looking at the residual plot, the conditions of independence was not satisfied due to an identified pattern of the residuals. Residuals are linearly distributed which shows some flaws of our linear regression model.Moreover, the conditions of homoscedasticity was not satisfied because residual points are not constant. In some regions of the plot, residual points are more compacted than in other. 
+---
+Overall, we can conclude that the linear regression model we used is good at predicting student workday alcohol consumption but it is important to note that our linear model is not perfect due the lack of satisfaction of some assumption for linearity.
+---
+
+Linear Regression - Alcohol Consumption Impact on Academic Performance
+
+
+G3 = B0 + B1(Dalc)
+
+failures = B0 + B1(Dalc)
+
+```{r alcohol consumption and final grade, echo = FALSE, message = FALSE}
+model_dalc_final_grade<-linear_reg()%>%
+  set_engine("lm")%>%
+  fit(G3~Dalc, data=student)
+print(tidy(model_dalc_final_grade))
+
+
+model_dalc_failures<-linear_reg()%>%
+  set_engine("lm")%>%
+  fit(failures~Dalc, data=student)
+print(tidy(model_dalc_failures))
+
+Result4<-tidy(model_dalc_final_grade)
+Result5<-tidy(model_dalc_failures)
+```
+
+
+
+```{r echo=TRUE}
+library(tidyverse)
+
+Result4%>%
+  knitr::kable()
+```
+
+
+```{r echo=TRUE}
+library(tidyverse)
+
+Result5%>%
+  knitr::kable()
+```
+
+----
+
+Result communication
+
+With this regression model, the result shows us that a one unit increase in daily alcohol consumption increases the number past failures by 0.11. Although we can state that daily alcohol consumption negatively impacts one's academic performance by contributing to the number of failed classes, the impact is relatively small, as someone who increases from moderate to very high drinking would only increase their number of past class failures by 0.22.
+
+
+
+
+
+
