--- a/presentation/presentation.Rmd
+++ b/presentation/presentation.Rmd
@@ -140,7 +140,7 @@ Result %>%
   kable(format = "html")
 ```
 --
-$π_i=\frac{π_i}{1-π_i} = 0.044 + 0.197(AttendedNursery_i) + 2.758(TravelTime_i)$
+$$π_i=\frac{π_i}{1-π_i} = 0.044 + 0.197(AttendedNursery_i) + 2.758(TravelTime_i)$$
 --
 ---
 
