--- a/Powerpoint presentation.Rmd
+++ b/Powerpoint presentation.Rmd
@@ -18,7 +18,7 @@ setwd("/home/guest/R/save-the-best-for-last-one")
 ```
 
 ## R Markdown
-iii
+
 
 This is an R Markdown presentation. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
@@ -62,8 +62,8 @@ Table_variables = data.frame(Variable_name,Details)
 ```
 
 ```{r }
-setwd("/home/guest/R/save-the-best-for-last-one")
-
+#setwd("/home/guest/R/save-the-best-for-last-one")
+setwd("/home/guest/R/project-1")
 student <- readr::read_csv("data/student-mat.csv")
 
 ```
